--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: jekyll-theme
 description: "A Jekyll theme made by me"
 encoding: utf-8
+highlighter: rouge
 
 exclude: ["README.md", "LICENSE", "*.gem", "*.gemspec", "Gemfile.lock"]
